[tool.poetry]
name = "conceptual-cartography"
version = "0.1.0"
authors = ['R Daniels', 'N Haket']
description = "Add your description here"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
experiment = "scripts.experiment:main"
visualize = "scripts.visualize:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tqdm = "^4.67.1"
transformers = "^4.51.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
click = "^8.2.1"
pydantic = "^2.11.4"
scipy = "^1.15.3"
plotly = "^6.1.2"
nbformat = "^5.10.4"
streamlit = "^1.45.1"


[tool.poetry.group.dev.dependencies]
# Add your dev dependencies here
# For example:
pytest = "^7.3.1"
ruff = "^0.11.9"
pre-commit = "^4.2.0"
ipykernel = "^6.29.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"